@@ -8354,3 +8354,6 @@ EPRINTS-3.1-beta-2
 2009-07-27 tdb
  * Added "collapse_help" option to workflow component to disable collapsing
 
+2009-07-29 tdb
+ * Added dynamic javascript and CSS based on user logged in status
+
